--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/app.js",
-    "build": "vue-cli-service build"
+    "build": ""
   },
   "author": "Alex Satoru Hanrahan",
   "license": "ISC",
