--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/app.js",
-    "build": ""
+    "start": "node server/app.js"
   },
   "author": "Alex Satoru Hanrahan",
   "license": "ISC",
