--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.3"
+  },
+  "env": {
+    "DB_CONNECT": "mongodb+srv://satoruhanrahan:ygshP%24_ubC%26Ee3a@cluster0-l7ajy.gcp.mongodb.net/users?retryWrites=true&w=majority",
+    "TOKEN_SECRET": "afkjvnaksddfjvn"
   }
 }
